# envelope

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/envelope/: __init__.py  spaces.py  struct.py
src/envelope/compat/: brax_envelope.py
src/envelope/wrappers/: observation_normalization_wrapper.py  vmap_envs_wrapper.py  vmap_wrapper.py
src/jenv/: environment.py  spaces.py  struct.py  typing.py
src/jenv/compat/: __init__.py  brax_jenv.py  craftax_jenv.py  gymnax_jenv.py  jumanji_jenv.py  kinetix_jenv.py  mujoco_playground_jenv.py  navix_jenv.py
src/jenv/wrappers/: autoreset_wrapper.py  canonicalize_wrapper.py  normalization.py  observation_normalization_wrapper.py  state_injection_wrapper.py  timestep_wrapper.py  truncation_wrapper.py  vmap_envs_wrapper.py  vmap_wrapper.py  wrapper.py
tests/: test_brax_compat.py  test_container.py  test_environment.py  test_navix_compat.py  test_struct.py
tests/compat/: conftest.py  test_brax_compat.py  test_craftax_compat.py  test_create.py  test_create_integration.py  test_gymnax_compat.py  test_jumanji_compat.py  test_kinetix_compat.py  test_mujoco_playground_compat.py  test_navix_compat.py
tests/spaces/: __init__.py  test_batched_space.py  test_continuous.py  test_discrete.py  test_pytree_space.py  test_serialization.py
tests/wrappers/: helpers.py  test_autoreset_wrapper.py  test_environment_wrapper.py  test_normalization.py  test_observation_normalization_wrapper.py  test_state_injection_wrapper.py  test_truncation_wrapper.py  test_vmap_envs_wrapper.py  test_vmap_wrapper.py
